# zero-fractal

./: .pnp.cjs  Anchor.toml  Cargo.toml  README.md  package.json
crates/fractal/src/: lib.rs
programs/sketch/: Cargo.toml
programs/sketch/src/: main.rs
programs/test-sketch/: Cargo.toml
programs/test-sketch/src/: main.rs
programs/zero-fractal/: Cargo.toml
programs/zero-fractal/src/: lib.rs
sketch/: Cargo.toml
sketch/src/: main.rs
sp1/: Cargo.toml
sp1/program/: Cargo.toml
sp1/script/: .env  Cargo.toml
sp1/script/src/: main.rs
test-sketch/: Cargo.toml
test-sketch/src/: main.rs
tests/: zero-fractal.ts
