[package]
name = "zero-fractal"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zero_fractal"

[features]
idl-build = ["anchor-lang/idl-build"]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []
custom-heap = []

[dependencies]
anchor-lang = "0.30.1"
sp1_solana = "*"
fractal = { path = "../../crates/fractal" }
